Up to latest master and fix IO.java breaking play precompile command